# kornia-gpu

./: .gitignore  Cargo.toml  README.md  UPSTREAM.md  build.rs
benches/: bench_gpu.rs
bubbaloop-node/: Cargo.toml
bubbaloop-node/src/: main.rs
examples/: bev_auto.rs  bev_compare.rs  bev_cuda.rs  bev_node.rs
kernels/cuda/: cast_and_scale.cu  gray_from_rgb.cu  warp_perspective.cu
src/: allocator.rs  backend.rs  error.rs  gpu_backend.rs  image.rs  lib.rs  pipeline.rs  pipeline_async.rs  pool.rs
src/cuda/: allocator.rs  image.rs  kernels.rs  mod.rs  pool.rs
src/kernels/: cast.rs  color.rs  mod.rs  resize.rs  warp.rs
src/shaders/: cast_and_scale.wgsl  gray_from_rgb.wgsl  resize_bilinear.wgsl  warp_perspective.wgsl
tools/: opencv_compare.py
